put beta disclaimer in div and keep off of left margin

--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -78,12 +78,9 @@
       </p>
     </div>
   </p>
-
-
-
-  <br>
-  <br>
-
-* You're going to hit some bugs, please forgive us! We're a small team and are working as hard as we can to fix them all.
-
+<div class="beta-disclaimer">
+  <p>
+    * You're going to hit some bugs, please forgive us! We're a small team and are working as hard as we can to fix them all.
+  </p>
+</div>
 </div>
