clean up landing page, don't be a preachy asshole

--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -5,82 +5,36 @@
   <p>
     <li><Strong>What is Just Be Human?</Strong></li>
     <br>
-    Put simply, Just Be Human is a platform for you to identify problems in your community, connect with neighbors who want to help, and track your progress over time as you work to solve real issues in your world.
+    Just Be Human is a platform for you to identify problems in your local community, connect with neighbors who want to help, and track progress over time as you work to solve real issues in your world.
     <br>
     <br>
     <li><Strong>How does it work?</Strong></li>
     <br>
-
-    You start by defining the problem you want to solve. It can be anything! Let's say it's picking up trash in your neighborhood, or doing some maintenance work in a neighborhood park, or getting a safety hazard like a pothole or dangerous sidewalk fixed.
+    A person identifies a problem in their community and creates a forum where people can discuss the issue, determine what resources are necessary to resolve it (time, skills, labor, equipment, etc), and then be connected with volunteers who are willing and able to provide those resources. 
     <br>
-    <br>
-    Once you have defined the problem, you set a due date and then define the milestones that must be met before the overall problem can be solved. Just Be Human allows you to define these milestones (which can be thought of as sub-problems) and then opens them up for people to volunteer to help!
-    <br>
-    <br>
-    What we do is give you a platform to discuss the problem, define it in detail, and track your team's progress over time to help make sure that your community's problem gets solved!
-
-    <br>
-    <br>
-    <li><Strong>Can you give me an example?</Strong></li>
-    <br>
-    
-      There's a vagrant lot in your neighborhood. It's an eyesore, it's filled with trash, and it's a haven for rodents. You've walked past it on your way to work every day for months and thought "someone should do something about that" almost every time. We believe that you're not alone in thinking that- and we want to connect you with the other people who have.
-      <br>
-      <br>
-        <ul>
-          <li>How do we do that?</li>
-          <ul>
-            <li>
-              Every <b>Problem</b> can be broken down into a collection of smaller problems that must be solved before the overarching problem can be solved. On our platform these are called <b>Milestones</b>.
-            </li>
-            <li>
-              So what are the milestones for our vagrant lot problem? Let's break it down into the pieces we need to fix this problem.
-              <ul>
-                <li>
-                  We need a few people. Let's call it 4 people so that we can get it done quickly.
-                </li>
-                <li>
-                  We need a collection of garden tools to deal with the overgrown weeds and grass.
-                </li>
-                <li>
-                  We need 4 pairs of gardening gloves to protect people's hands.
-                </li>
-                <li>
-                  We need some rubber gloves in case there is any biological waste.
-                </li>
-                <li>
-                  We need some heavy-duty trash bags for the trash we collect.
-                </li>
-                <li>
-                  We should get a couple pizzas to feed the volunteers! Everyone loves pizza.
-                </li>
-                <li>
-                  We need one or two people to volunteer to dispose of the trash when we're done.
-                </li>
-              </ul>
-            </li>
-            <li>
-              Now that we have our <b>Milestones</b> defined, we can create our <b>Problem</b>! When we create it, we set the location to the address of the vagrant lot, or optionally we can just set it to the zip code that we're looking for help in. We also set a "due date"- this is the date, not that we want to actually clean the vagrant lot, but that we want to have all of our Milestones completed by. We also set the number of volunteers we think will be needed. In this case, that's 4.
-            </li>
-            <li>
-              Once the Problem is created, it is opened up to the world! People can then "follow" the problem if they want to be involved. After following the Problem, a user may then participate in discussions about the Problem and volunteer to help solve any of the specific Milestones. When they do this, they are telling the other volunteers that they are willing to take responsibility for the completion of their Milestone.
-            </li>
-          </ul>
-        </ul>
-        <br>  
-        This system allows people to break down problems in their community that <em>seem impossible to handle alone</em> into discrete tasks and responsibilities that can be assigned to specific people and their progress can be tracked over time!
-        <br>
-        <br>
-        If you're interested in more information about Just Be Human, you can check out the links in the footer below!
+    <ul>
+      <li>
+        A user creates a <b>Problem</b> with a location and a desired completion date on the platform which is then broken down into individual tasks and responsibilities called <b>Milestones</b>.
+      </li>
+      <li>
+        Other users search by category or on a map of their local area to find Problems that they can follow, discuss, and volunteer for.
+      </li>
+      <li>
+        Participants in a Problem all know each other's roles and responsibilities and also know and agree on due dates, holding volunteers accountable to each other.
+      </li>
+      <li>
+        A Problem that has completed all of its Milestones means that a real-world problem in your community has been solved!
+      </li>
+    </ul>
       </p>
       <p class="lead">
-        <a class="btn btn-danger btn-lg" href="/users/sign_in" role="button">Let's start solving problems!</a>
+        <a class="btn btn-danger btn-lg" href="/users/sign_in" role="button">Let's start volunteering!</a>
       </p>
     </div>
   </p>
 <div class="beta-disclaimer">
   <p>
-    * You're going to hit some bugs, please forgive us! We're a small team and are working as hard as we can to fix them all.
+    * You're going to run into some bugs, please forgive us! We're a small team and are working as hard as we can to fix them all.
   </p>
 </div>
 </div>
