a bit more cleanup

--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -20,10 +20,10 @@
         Other users search by category or on a map of their local area to find Problems that they can follow, discuss, and volunteer for.
       </li>
       <li>
-        Participants in a Problem all know each other's roles and responsibilities and also know and agree on due dates, holding volunteers accountable to each other.
+        Volunteers for a Problem all know each other's roles and responsibilities and also know and agree on due dates, holding volunteers accountable to each other.
       </li>
       <li>
-        A Problem that has completed all of its Milestones means that a real-world problem in your community has been solved!
+        A Problem that has completed all of its Milestones is a powerful thing- it's a real-world problem in your community that has been solved!
       </li>
     </ul>
       </p>
