one more tiny edit to the landing page

--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -23,7 +23,7 @@
         Volunteers for a Problem all know each other's roles and responsibilities and also know and agree on due dates, holding volunteers accountable to each other.
       </li>
       <li>
-        A Problem that has completed all of its Milestones is a powerful thing- it's a real-world problem in your community that has been solved!
+        A Problem that has completed all of its Milestones is a real-world problem in your community that has been solved!
       </li>
     </ul>
       </p>
