cleaned up migrations, finalized database schema

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -3,6 +3,12 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
+
+//
+//
+//
+// HOME PAGE STYLING
+
 /* Style the tab */
 .tab {
   overflow: hidden;
@@ -64,6 +70,10 @@
 }
 
 
+//
+//
+//
+// DONATE PAGE STYLING
 
 .donation-booleans {
   text-align: center;
@@ -85,6 +95,27 @@
   padding-top: 3vh;
 }
 
+.donation-info-container {
+  padding-right: 20vw;
+}
+
+.donation-email-label {
+  padding-bottom: 2vh;
+}
+
+.form-actions {
+  padding-top: 4vh;
+  padding-right: 20%;
+  padding-left: 20%;
+}
+
+.donation-email-input {
+  padding-top: 2vh;
+}
+
+.donation-booleans {
+  padding-top: 6vh;
+}
 .aboutus-title {
   padding-left: 1vw;
   padding-top: 2vw;
