update: register and problem form

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,7 +10,7 @@ html, body {
 }
 
 .main {
-  padding: 4vh 2vw;
+  padding: 4vh 0;
 }
 
 .wrapper {
@@ -26,18 +26,21 @@ html, body {
   font-size: 2.2em;
 }
 
-#map {
-  height: 100%;
-  width: 100%;
-  margin: auto;
-}
-
 .navbar-beta-tag {
   vertical-align: text-top;
   font-size: .3rem;
   line-height: 200%;
 }
 
+#map {
+  height: 100%;
+  width: 100%;
+  margin: auto;
+}
+
+.alert {
+  margin-bottom: 0;
+}
 
 .landing-beta-tag {
   font-size: .3em;
