--- a/app/views/problems/new.html.erb
+++ b/app/views/problems/new.html.erb
@@ -1,7 +1,7 @@
-<h1>New Problem</h1>
+<div class="main container">
+  <h1>Address a problem you want help tackling</h1>
+  <%= render 'form', problem: @problem %>
 
-<%= render 'form', problem: @problem %>
-
-<br/>
-<br/>
-<%= link_to 'Back', :back, class: 'btn btn-warning' %>
+  <br/>
+  <%= link_to 'Back', :back, class: 'btn btn-warning' %>
+</div>
