--- a/app/assets/stylesheets/problems.scss
+++ b/app/assets/stylesheets/problems.scss
@@ -56,6 +56,14 @@
   max-width: 28vw;
 }
 
+.problem-link {
+  color: #fff;
+
+  &:hover {
+    color: #ddd;
+  }
+}
+
 /* Go from zero to full opacity */
 @keyframes fadeEffect {
   from {opacity: 0;}
