--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -1,8 +1,9 @@
-$primary: #1B85E2;
+$primary: #3088CC;
 $secondary: #47624F;
-$info: #7BEDDC;
-$success: #5BD365;
+$secondary-hover: #57705F;
+$info: #70D8C8;
+$success: #6AD173;
 $danger: #CE3333;
-$warning: #EFA00B;
-$light: #D0E5F4;
-$dark: #091923;
+$warning: #F2B849;
+$light: #DEE7ED;
+$dark: #1E2326;
