--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,12 +1,19 @@
 @import "/*";
 @import "bootstrap";
 @import "tether";
+@import url('https://fonts.googleapis.com/css?family=Rubik&display=swap');
 
 //*= require introjs
 
 html, body {
   height: 100vh;
   margin: 0;
+  font-family: 'Rubik', Arial, sans-serif;
+}
+
+h1, h2, h3, h4, h5 {
+  text-transform: uppercase;
+  letter-spacing: 2px;
 }
 
 .main {
