--- a/app/views/problems/show.html.erb
+++ b/app/views/problems/show.html.erb
@@ -1,150 +1,143 @@
-  <body>
-    <h1> <%= @problem.title %> </h1>
-    <div class="tab">
-      <button class="tablinks" onclick="openTab(event, 'problem-info-tab')" id="defaultOpen">General Problem Info</button>
-      <button class="tablinks" onclick="openTab(event, 'problem-milestones-tab')">Milestones and Progress</button>
-      <% if @is_admin %>
-        <button class="tablinks" onclick="openTab(event, 'problem-people-tab')">Manage Volunteers and Followers</button>
-      <% elsif @role %>
-        <button class="tablinks" onclick="openTab(event, 'problem-people-tab')">Volunteers and Followers</button>
-      <% end %>
+<body>
+  <h1> <%= @problem.title %> </h1>
+  <div class="tab">
+    <button class="tablinks" onclick="openTab(event, 'problem-info-tab')" id="defaultOpen">General Problem Info</button>
+    <button class="tablinks" onclick="openTab(event, 'problem-milestones-tab')">Milestones and Progress</button>
+    <% if @is_admin %>
+      <button class="tablinks" onclick="openTab(event, 'problem-people-tab')">Manage Volunteers and Followers</button>
+    <% elsif @role %>
+      <button class="tablinks" onclick="openTab(event, 'problem-people-tab')">Volunteers and Followers</button>
+    <% end %>
+  </div>
+  <!-- Tab content -->
+  <div id="problem-info-tab" class="tabcontent">
+    <div class="tab-title"><h2>Problem Information</h2></div>
+    <h5>
+      <strong>Title:</strong>
+      <%= @problem.title %>
+    </h5>
 
-    </div>
-    <!-- Tab content -->
-    <div id="problem-info-tab" class="tabcontent">
-      <div class="tab-title"><h2>Problem Information</h2></div>
-      <h5>
-        <strong>Title:</strong>
-        <%= @problem.title %>
-      </h5>
+    <h5>
+      <strong>Description:</strong>
+      <%= @problem.description %>
+    </h5>
+    <h5>
+      <strong>Category:</strong>
+      <%= @problem.category_title %>
+    </h5>
+    <h5>
+      <strong>Sub Category:</strong>
+      <%= @problem.subcategory_title %>
+    </h5>
 
-      <h5>
-        <strong>Description:</strong>
-        <%= @problem.description %>
-      </h5>
-      <h5>
-        <strong>Category:</strong>
-        <%= @problem.category_title %>
-      </h5>
-      <h5>
-        <strong>Sub Category:</strong>
-        <%= @problem.subcategory_title %>
-      </h5>
+    <h5>
+      <strong>Target completion date:</strong>
+      <%= @problem.target_completion_date %>
+    </h5>
 
-      <h5>
-        <strong>Target completion date:</strong>
-        <%= @problem.target_completion_date %>
-      </h5>
+    <h5>
+      <strong>Admin:</strong>
+      <%= @problem.user.username %>
+    </h5>
 
-      <h5>
-        <strong>Admin:</strong>
-        <%= @problem.user.username %>
-      </h5>
+    <h5>
+      <strong>Follower count:</strong>
+      <%= @problem.follower_count %>
+    </h5>
 
-      <h5>
-        <strong>Follower count:</strong>
-        <%= @problem.follower_count %>
-      </h5>
-
-      <h5>
-        <strong>Current Volunteer Count / Target Volunteer Count:</strong>
-        <%= @problem.volunteer_count %> / <%= @problem.volunteers_required %>
-      </h5>
-      <br>
-      <br>
+    <h5>
+      <strong>Current Volunteer Count / Target Volunteer Count:</strong>
+      <%= @problem.volunteer_count %> / <%= @problem.volunteers_required %>
+    </h5>
+    <br>
+    <br>
 
 
-      <div class="posts-container">
-        <h2> Posts </h2>
-        <% @problem.posts.each do |post| %>
-          <ol>
-            <div class="post-container">
-              <div class="post-title">
-                <p>Topic: <%= link_to "#{post.title}", post, class: 'btn btn-info btn-lg' %></p>
-              </div>
-              <div class="post-user">
-                <% post_user = User.find(post.user_id) %>
-                <p>Started By: <%= post_user.username %> at <%= post.created_at.strftime('%m/%d/%Y') %></p>
-              </div>
-              <div class="post-miscellaneous">
-                <p>
-                  # of responses: <%= post.comment_count %>
-                  <% if current_user == post_user || @is_mod%>
-                    <div class="post-admin-links">
-                      <div class="btn-group" role="group" aria-label="Admin Controls">
-                        <% if @is_mod %>
-                          <%= link_to 'Edit', edit_post_path(post), class: 'btn btn-outline-info btn-lg', data: { modal: true } %>
-                          <%= link_to 'Delete', post, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-outline-danger btn-lg' %>
-                        <% end %>
-                      </div>
-                    </div>
-                  <% end %>
-                </p>
-              </div>
-
+    <div class="posts-container">
+      <h2> Posts </h2>
+      <% @problem.posts.each do |post| %>
+        <ol>
+          <div class="post-container">
+            <div class="post-title">
+              <p>Topic: <%= link_to "#{post.title}", post, class: 'btn btn-info btn-lg' %></p>
             </div>
-          </ol>
+            <div class="post-user">
+              <% post_user = User.find(post.user_id) %>
+              <p>Started By: <%= post_user.username %> at <%= post.created_at.strftime('%m/%d/%Y') %></p>
+            </div>
+            <div class="post-miscellaneous">
+              <p># of responses: <%= post.comment_count %></p>
+                <% if current_user == post_user || @is_mod%>
+                  <div class="post-admin-links">
+                    <div class="btn-group" role="group" aria-label="Admin Controls">
+                      <% if @is_mod %>
+                        <%= link_to 'Edit', edit_post_path(post), class: 'btn btn-outline-info btn-lg', data: { modal: true } %>
+                        <%= link_to 'Delete', post, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-outline-danger btn-lg' %>
+                      <% end %>
+                    </div>
+                  </div>
+                <% end %>
+            </div>
 
+          </div>
+        </ol>
+
+      <% end %>
+      <div class="add-post">
+        <% if current_user && @role %>
+          <%= link_to 'Add A Post', new_post_path(:problem => {:problem_id => @problem.id}), class: "btn-success btn-lg btn-block" %>
         <% end %>
-        <div class="add-post">
-          <% if current_user && @role %>
-            <%= link_to 'Add A Post', new_post_path(:problem => {:problem_id => @problem.id}), class: "btn-success btn-lg btn-block" %>
-          <% end %>
-        </div>
       </div>
     </div>
+  </div>
 
-    <div id="problem-milestones-tab" class="tabcontent">
-      <div class="tab-title"><h2>Milestones</h2></div>
+  <div id="problem-milestones-tab" class="tabcontent">
+    <div class="tab-title"><h2>Milestones</h2></div>
 
-      <% @problem.milestones.each do |milestone| %>
-        <div class="milestone-container">
-          <p>
-            <div class="milestone-title">
-              <Strong>Title:</Strong> <%= milestone.title %><br>
-            </div>
-            <div class="milestone-status">
-              <Strong>Current Status:</Strong> <%= milestone.current_status %><br>
-            </div>
-            <div class="milestone-info">
-              <Strong>Complete:</Strong> <%= milestone.complete %> <br>
-              <Strong>Current/Needed Volunteers:</Strong> <%= milestone.volunteers_required %> <br>
-            </div>
-            <div class="milestone-button-group">
-              <div class="btn-group" role="group" aria-label="Admin Controls">
-                <% if @is_mod %>
-                <%= link_to 'Edit', edit_milestone_path(milestone), class: 'btn btn-outline-info my-2 my-sm-0', data: { modal: true } %>
-                <%= link_to 'Delete', milestone, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-outline-danger my-2 my-sm-0' %>
-                <% end %>
-              </div>
-            </div>
-          </p>
+    <% @problem.milestones.each do |milestone| %>
+      <div class="milestone-container">
+        <div class="milestone-title">
+          <Strong>Title:</Strong> <%= milestone.title %><br>
         </div>
-      <%end%>
-
-
-      <% if @is_mod %>
-        <div class="add-milestone-button">
-          <%= link_to 'Add a new milestone', new_milestone_path(:milestone => {:problem_id => @problem.id}), class: 'btn btn-success btn-lg btn-block', data: { modal: true } %>
+        <div class="milestone-status">
+          <Strong>Current Status:</Strong> <%= milestone.current_status %><br>
         </div>
-      <% end %>
-    </div>
-
-    <div id="problem-people-tab" class="tabcontent">
-      <h2>Followers</h2>
-        <% @problem.problem_roles.each do |role| %>
-          <p>Username: <%= role.user.username %>  |  ProblemRole. <%= role.title %>
-            <% if @is_admin %>
-              <% if (current_user == @problem.user) && (role.user != current_user) && (role.level == 4 || role.level == 3) %>
-              | <%= link_to 'Promote User', controller: "problems", action: "promote_user", problem_id: @problem.id, target_user_id: role.user.id %>
-              <% elsif (current_user == @problem.user) && (role.user != current_user) && role.level < 3 %>
-              | <%= link_to 'Demote User', controller: "problems", action: "demote_user", problem_id: @problem.id, target_user_id: role.user.id %>
-              <% end %>
+        <div class="milestone-info">
+          <Strong>Complete:</Strong> <%= milestone.complete %> <br>
+          <Strong>Current/Needed Volunteers:</Strong> <%= milestone.volunteers_required %> <br>
+        </div>
+        <div class="milestone-button-group">
+          <div class="btn-group" role="group" aria-label="Admin Controls">
+            <% if @is_mod %>
+            <%= link_to 'Edit', edit_milestone_path(milestone), class: 'btn btn-outline-info my-2 my-sm-0', data: { modal: true } %>
+            <%= link_to 'Delete', milestone, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-outline-danger my-2 my-sm-0' %>
             <% end %>
-          </p>
-        <% end %>
-    </div>
+          </div>
+        </div>
+      </div>
+    <%end%>
 
+    <% if @is_mod %>
+      <div class="add-milestone-button">
+        <%= link_to 'Add a new milestone', new_milestone_path(:milestone => {:problem_id => @problem.id}), class: 'btn btn-success btn-lg btn-block', data: { modal: true } %>
+      </div>
+    <% end %>
+  </div>
 
-    <p><%= link_to 'Back', :back, class: "btn btn-warning btn-lg" %></p>
-  </body>
+  <div id="problem-people-tab" class="tabcontent">
+    <h2>Followers</h2>
+      <% @problem.problem_roles.each do |role| %>
+        <p>Username: <%= role.user.username %>  |  ProblemRole. <%= role.title %>
+          <% if @is_admin %>
+            <% if (current_user == @problem.user) && (role.user != current_user) && (role.level == 4 || role.level == 3) %>
+            | <%= link_to 'Promote User', controller: "problems", action: "promote_user", problem_id: @problem.id, target_user_id: role.user.id %>
+            <% elsif (current_user == @problem.user) && (role.user != current_user) && role.level < 3 %>
+            | <%= link_to 'Demote User', controller: "problems", action: "demote_user", problem_id: @problem.id, target_user_id: role.user.id %>
+            <% end %>
+          <% end %>
+        </p>
+      <% end %>
+  </div>
+
+  <p><%= link_to 'Back', :back, class: "btn btn-warning btn-lg" %></p>
+</body>
