--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,7 +26,7 @@ h1, h2, h3, h4, h5 {
 
 .navbar {
   height: 10vh;
-  font-family: 'Lucida Grande', Verdana, Arial, Sans-Serif;
+  font-family: 'Rubik', Arial, sans-serif;
 }
 
 .navbar-brand {
