--- a/app/views/milestones/show.html.erb
+++ b/app/views/milestones/show.html.erb
@@ -6,8 +6,8 @@
 
 <% if !@ms_role %>
 <%= link_to 'Volunteer to help with this milestone!', controller: 'milestones', action: 'participate', milestone_id: @milestone.id %>
-<% elsif @ms_role.level <= 2 %>
+<% elsif @ms_role.level < 2 %>
 <%= link_to 'Edit this milestone', edit_milestone_path(@milestone) %>
-<% elsif @ms_role.level == 3 %>
+<% elsif @ms_role.level >= 2 %>
 <%= link_to 'Cancel your participation', controller: 'milestones', action: 'cancel_participation', milestone_id: @milestone.id %>
 <% end %>
