fixed mobile nav and footer

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -1,5 +1,5 @@
 .navbar {
-  height: 10vh;
+  min-height: 10vh;
   font-family: 'Rubik', Verdana, Arial, Sans-Serif;
   text-transform: uppercase;
 }
