--- a/app/views/pages/_problem_row.html.erb
+++ b/app/views/pages/_problem_row.html.erb
@@ -4,7 +4,7 @@
       <h5><%= problem.title %></h5>
       <p><%= problem.description %></p>
       <p><strong>Due: </strong><%= problem.target_completion_date %></p>
-      <p><strong>Created by: </strong><%= problem.user.username %></p>
+      <p><strong>Created by: </strong><%= User.find(problem.user_id).username %></p>
     </a>
   </div>
 </div>
